# libxc

./: .travis.yml  CMakeLists.txt  Makefile.am  Makefile.in  README.md  appveyor.yml  configure  configure.ac
cmake/: FindStandardMathLibrary.cmake  LibxcConfig.cmake.in  Psi4Macros.cmake
m4/: fc_integer.m4  fc_iso_c_binding.m4  fcflags.m4  fortran.m4
src/: Makefile.am  Makefile.in  expint_e1.c  functionals.c  gga.c  lda.c  libxc_master.F03  libxc_master.F90  mgga.c  string_f.h  util.h  xc.h
src/maple2c/: mgga_x_mvs.c
testsuite/: CMakeLists.txt  Makefile.am  Makefile.in  xc-run_testsuite
